<resources>
    <string name="facebook_app_id">200198550767806</string>
    <string name="firebase_error_login">Firebase Login Error</string>
    <string name="app_name">El Gayza</string>
    <string name="quiz_game">Quiz Game</string>
    <string name="description">Description</string>
    <string name="play">Play</string>
    <string name="quit">Quit</string>
    <string name="answer_4">Answer 4</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_1">Answer 1</string>
    <string name="question">Question</string>
    <string name="score">Score</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="verify">Verify</string>
    <string name="logout">Logout</string>
    <string name="status">Status</string>
    <string name="el_gayza">El Gayza</string>
    <string name="verified">Verified</string>
    <string name="not_verified">Not Verified</string>
    <string name="next_quiz">Next Quiz is starting at:</string>
    <string name="time">Time</string>
</resources>
